# auto-dev-crew

./: .gitignore  LICENSE  README.md  requirements.txt
app/: .gitignore  code_plan.md  pyproject.toml  test_plan.md
app/src/: utils.py
app/src/autodevcrew_flow/: main.py  main_bench.py  model_parser.py  prompt_utils.py  tasks.py
app/src/autodevcrew_flow/crews/bench_crew/: bench_crew.py
app/src/autodevcrew_flow/crews/bench_crew/config/: agents.yaml  tasks.yaml
app/src/autodevcrew_flow/crews/project_crew/: project_crew.py
app/src/autodevcrew_flow/crews/project_crew/config/: hitl_tasks.yaml  tasks.yaml
app/src/autodevcrew_flow/tools/: custom_tool.py
bench_files/: sample.json
results/: hitl_preds.json  preds.json
sample/: SWE-bench.json  tasks.txt
